# resqdb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clusters.json  dummy.py  export.py  hooks.py  main.py  models.py  pyproject.toml  scenarios.py  settings.py  simulation.py  views.py
config/: capacities.json  categories.json  clusters.json  labels.json
scenarios/: extreme1_rcp45_p1.yaml  extreme1_rcp85_p1.yaml  extreme2_rcp45_p2.yaml
tests/: test_scenarios.py
views/: autarky.sql  autarky_simultaneously.sql  capacities.sql  cluster_energies.sql  cluster_energies_map.sql  energy_flows.sql  flows_to_cluster.sql  input_timeseries.sql  production_demand.sql
